// SPDX-FileCopyrightText: Contributors to the GXF project
//
// SPDX-License-Identifier: Apache-2.0

edition = "2024";

package org.lfenergy.gxf.publiclighting.contracts.internal.device_requests;

import "google/protobuf/timestamp.proto";

message DeviceRequestMessage {
  RequestHeader header = 1;

  // Omitted when request does not contain any data
  oneof payload {
    SetLightRequest set_light_request = 2;
    SetScheduleRequest set_schedule_request = 3;
    ResumeScheduleRequest resume_schedule_request = 4;
    SetTransitionRequest set_transition_request = 5;
    SetEventNotificationMaskRequest set_event_notification_mask_request = 6;
    SetConfigurationRequest set_configuration_command = 7;
  }
}

message RequestHeader {
  string correlation_uid = 1;
  string device_identification = 2;
  string device_type = 3;
  string organization_identification = 4;
  RequestType request_type = 5;
  google.protobuf.Timestamp timestamp = 6;
}

enum RequestType {
  GET_STATUS_REQUEST = 0;
  SET_LIGHT_REQUEST = 1;
  REBOOT_REQUEST = 2;
  START_SELF_TEST_REQUEST = 3;
  STOP_SELF_TEST_REQUEST = 4;
  SET_SCHEDULE_REQUEST = 5;
  RESUME_SCHEDULE_REQUEST = 6;
  SET_TRANSITION_REQUEST = 7;
  SET_EVENT_NOTIFICATION_MASK_REQUEST = 8;
  GET_CONFIGURATION_REQUEST = 9;
  SET_CONFIGURATION_REQUEST = 10;
  GET_FIRMWARE_VERSION_REQUEST = 11;
}

message SetLightRequest {
  repeated LightValue light_values = 1;
}

message SetScheduleRequest {
  // TODO - define schedule structure here
}

message ResumeScheduleRequest {
  bytes index = 1;
  bool immediate = 2;
}

message SetTransitionRequest {
  TransitionType transition_type = 1;
  string time = 2;  // format: hhmmss UTC
}

message SetEventNotificationMaskRequest {
  // TODO - define notification bitmask structure here
}

message SetConfigurationRequest {
  // TODO - define configuration structure here
}

message LightValue {
  RelayIndex index = 1;
  bool light_on = 2;
}

enum RelayIndex{
  RELAY_ALL = 0;
  RELAY_ONE = 1;
  RELAY_TWO = 2;
  RELAY_THREE = 3;
  RELAY_FOUR = 4;
}

enum TransitionType {
  SUNRISE = 0;
  SUNSET = 1;
}

